When splitting a Node Editor area containing Python nodes, the new area shows nodes but does not have an active nodetree #37741

Closed
opened 2013-12-08 22:42:02 +01:00 by Tom Edwards · 6 comments

System Information
Win7 x64

Blender Version
Broken: Blender 2.69 r60995
Worked: unknown

The new area will correctly display the same node tree as the original area, but bpy.context.space_data.node_tree will be None and the header's template_ID UI element will be empty.

Exact steps for others to reproduce the error

  • Create a Python node tree
  • Split the Node Editor area

Demo: node_list_bugs.blend

**System Information** Win7 x64 **Blender Version** Broken: Blender 2.69 r60995 Worked: unknown The new area will correctly display the same node tree as the original area, but `bpy.context.space_data.node_tree` will be None and the header's `template_ID` UI element will be empty. **Exact steps for others to reproduce the error** - Create a Python node tree - Split the Node Editor area Demo: [node_list_bugs.blend](https://archive.blender.org/developer/F37535/node_list_bugs.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Lukas Tönne was assigned by Tom Edwards 2013-12-08 22:42:02 +01:00
Author

Added subscriber: @artfunkel

Added subscriber: @artfunkel

This issue was referenced by blender/blender-addons-contrib@964252cdda

This issue was referenced by blender/blender-addons-contrib@964252cdda6feedab58d42fc3fe92a42cd47501d

This issue was referenced by 964252cdda

This issue was referenced by 964252cdda6feedab58d42fc3fe92a42cd47501d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 964252cdda.

Closed by commit 964252cdda.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37741
No description provided.